[package]
name = "cosmic-theme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["test_all_features"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["iced-theme", "ron-serialization"]
no-default = []
iced-theme = ["iced"]
ron-serialization = []

[dependencies]
palette = {version = "0.6", features = ["serializing"] }
anyhow = "1.0"
hex = "0.4.3"
kmeans_colors = { git = "https://github.com/okaneco/kmeans-colors", features = ["palette_color"], default-features = false }
float-cmp = "0.9.0"
notify = "5.0.0" 
serde = { version = "1.0.129", features = ["derive"] }
ron = "0.8"
toml = "0.5.8"
dirs = "4.0.0"
xdg = "2.4.1"
futures = "0.3.21"
image = "0.24.1"
iced = { git = "https://github.com/wash2/iced", optional = true, branch = "fix_window_resize" }
lazy_static = "1.4.0"