[package]
name = "cosmic-theme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["test_all_features"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["iced-theme"]
no-default = []
contrast-derivation = ["float-cmp"]
iced-theme = ["iced"]
theme-from-image = ["kmeans_colors", "contrast-derivation", "float-cmp", "image"]
hex-color = ["hex"]

[dependencies]
palette = {version = "0.6", features = ["serializing"] }
anyhow = "1.0"
hex = {version = "0.4.3", optional = true}
kmeans_colors = { git = "https://github.com/okaneco/kmeans-colors", features = ["palette_color"], default-features = false, optional = true }
image = {version = "0.24.1", optional = true }
float-cmp = { version = "0.9.0", optional = true }
notify = "5.0.0" 
serde = { version = "1.0.129", features = ["derive"] }
ron = "0.8"
xdg = "2.4.1"
futures = "0.3.21"
iced = { git = "https://github.com/wash2/iced", branch = "fix_window_resize", optional = true }
lazy_static = "1.4.0"
csscolorparser = {version = "0.6.2", features = ["serde"]}
